user avatar not showing in video-section + fixed some light theme issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,9 +18,9 @@ body {
         --card-foreground: 0 0% 3.9%;
         --popover: 0 0% 100%;
         --popover-foreground: 0 0% 3.9%;
-        --primary: 0 0% 9%;
+        --primary: 47.9 95.8% 53.1%;
         --primary-foreground: 0 0% 98%;
-        --secondary: 0 0% 96.1%;
+        --secondary: 36 100% 50%;
         --secondary-foreground: 0 0% 9%;
         --muted: 0 0% 96.1%;
         --muted-foreground: 0 0% 45.1%;
